--- a/ifit/package.json
+++ b/ifit/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.21.2",
     "apollo-boost": "^0.1.22",
     "axios": "^0.18.0",
     "bootstrap": "^4.6.2",
