new auth and all

--- a/ifit/package.json
+++ b/ifit/package.json
@@ -2,6 +2,7 @@
   "name": "ifit",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "https://reimagined-tribble-pp67x7pj9q73rxg-5000.app.github.dev",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
